# SATYA-V-2.0

./: .dockerignore  .env  .env.example  .env.production  .env.template  .env.test  .eslintrc.json  .gitignore  .lighthouserc.json  .replit  ANALYSIS_TESTING_REPORT.md  BACKEND_ANALYSIS.md  BACKEND_COMPREHENSIVE_ANALYSIS_2025.md  BACKEND_ISSUES_RESOLVED.md  BACKEND_OPTIMIZATION.md  BACKEND_STATUS.md  CONSOLE_SANITIZATION_REPORT.md  DASHBOARD_LAYOUTS_ANALYSIS.md  DASHBOARD_MAINLAYOUT_ADDED.md  Dockerfile  FACEFORENSICS_TEST_REPORT.md  FRONTEND_BACKEND_INTEGRATION_STATUS.md  FRONTEND_INTEGRATION_SCAN.md  FRONTEND_USAGE_ANALYSIS.md  INTEGRATION_COMPLETE.md  INTEGRATION_FINAL_REPORT.md  INTEGRATION_PROGRESS.md  LICENSE  MAINLAYOUT_EXPLAINED.md  PROJECT_OVERVIEW.md  README.md  SATYAAI_DATABASE_SCHEMA.sql  SATYAAI_DATABASE_SCHEMA_OPTIMIZED.sql  SPEC_COMPLETION_REPORT.md  SPEC_REVIEW_ANALYSIS.md  TASKS_COMPLETED_SUMMARY.md  all_md_txt_list.txt  all_tsx_files.txt  alpha  check_job.js  (+48 more)
server/python/: .env.example  .gitignore  ANALYSIS_FIXES_SUMMARY.md  Dockerfile  __init__.py  ai_hardened_inference.py  animations.py  api_integrations.py  app.py  auth_manager.py  comprehensive_ml_test.py  config.py  config_strict_mode.py  deepfake_analyzer.py  detector.py  download_dataset.py  download_model.py  ensemble_analyzer.py  fastapi_main.py  finetune_model.py  flask_main.py  gunicorn.conf.py  init_models.py  magic_library_fix.py  main.py  main_advanced.py  main_api.py  main_api_fixes.py  metrics.py  ml_core_verification.py  model_loader.py  model_manager.py  models.py  opensource_models.py  (+32 more)
(+1003 files in other folders)
